--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@types/mocha": "^5.2.5",
     "@types/node": "^13.13.1",
     "@types/screeps": "^3.2.3",
-    "@types/screeps-profiler": "^1.2.5",
+    "@types/screeps-profiler": "^1.2.6",
     "@types/sinon": "^5.0.5",
     "@types/sinon-chai": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
@@ -86,6 +86,7 @@
     "rollup-plugin-typescript2": "^0.31.0",
     "rollup-plugin-version-injector": "^1.3.3",
     "rollup-plugin-visualizer": "^5.12.0",
+    "screeps-cartographer": "^1.8.12",
     "screeps-profiler": "^2.0.1",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
@@ -97,6 +98,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "creep-tasks": "^1.3.0",
     "screeps-inscribe": "^0.2.0",
     "source-map": "~0.6.1"
   }
